<resources>
    <string name="app_name">Smart Consult</string>
    <string name="select_your_syptoms">Select Your Syptoms</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="me">Me</string>
    <string name="health">Health</string>
    <string name="select_sender_prompt">Select sender</string>

    <string name="Patients">Patients</string>
    <string name="Reports">Reports</string>
    <string name="Chat">Chat</string>
    <string name="Appointment">Appointment</string>
    <string name="patients">Patients</string>
    <string name="appointment">Appointment</string>
    <string name="dashboard">Doctor Dashboard</string>
    <string name="back">back</string>
    <string name="welcome_back">welcome back</string>

</resources>
