<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/h4"
    tools:context=".Drdash">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_view" />

    <GridLayout
        android:layout_width="350dp"
        android:layout_height="481dp"
        android:layout_below="@id/top_view"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPatients"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/baseline_person_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Patients"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReports"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/white"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/reports" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Reports"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardChat"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chatNotificationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/baseline_notifications_active_24"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/cardChatLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="89dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/baseline_chat_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Chat"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAppointment"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/appointmentNotificationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/baseline_notifications_active_24"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/cardAppointmentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/appointment" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Appointment"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/messageCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/appointmentCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageCountTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>
